--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>JobsHQ</title>
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>    
   </head>
+  
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
